# pygpeople

./: .gcp.conf  .services  README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py
doc/: TODO.txt
pygpeople/: configs.py  constants.py  main.py  static.py
src/pygpeople/: __init__.py  client_secret.json  main.py
