[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygpeople"
version = "0.0.3"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Manage your contacts in google"
readme = "README.md"
license = "MIT"
keywords=[
    "google",
    "contacts",
    "people",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pygooglehelper",
    "google-api-python-client",
    "pytconf",
    "pylogconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pygpeople"
"Bug Tracker" = "https://github.com/veltzer/pygpeople/issues"
"Documentation" = "https://veltzer.github.io/pygpeople"
"Download" = "https://pypi.org/project/pygpeople/"
"Repository" = "https://github.com/veltzer/pygpeople"

[project.scripts]
pygpeople = "pygpeople.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]
